--- a/ojob_p2.yaml
+++ b/ojob_p2.yaml
@@ -45,6 +45,7 @@ jobs:
     {{else}}
     ssh-keygen -A
     sudo service ssh start
+    sudo systemctl enable ssh
     {{/if}}
 
 # ===================
@@ -57,6 +58,7 @@ jobs:
     sudo update-alternatives --set iptables /usr/sbin/iptables-legacy
     echo updated
     sudo service docker start 
+    sudo systemctl enable docker
     {{/if}}
 
 # -------------------------------
