--- a/.github/workflows/docker-full-image.yml
+++ b/.github/workflows/docker-full-image.yml
@@ -24,6 +24,10 @@ jobs:
       uses: docker/setup-qemu-action@v3
     - name: Set up Docker Buildx
       uses: docker/setup-buildx-action@v3
+    - name: Create Docker Buildx Builder
+      run: |
+        docker buildx create --use
+        docker buildx inspect --bootstrap
     - name: Login to DockerHub
       uses: docker/login-action@v3
       with:
@@ -31,8 +35,20 @@ jobs:
         password: ${{ secrets.DOCKERHUB_TOKEN }}
     - uses: actions/checkout@v4
       name: Checkout
-    - name: Full image build
+    - name: Full image build x64
       run : |
         docker run --name buildfull --privileged --cgroupns=host nmaguiar/d3k:build /bin/sh -c "status.js && sleep 5 && k3d cluster stop"
-        docker commit buildfull nmaguiar/d3k:build-full
-        docker push nmaguiar/d3k:build-full
+        docker commit buildfull nmaguiar/d3k:build-full:amd64
+        docker push nmaguiar/d3k:build-full:amd64
+    - name: Full image build arm64
+      run : |
+        docker run --name buildfull --privileged --cgroupns=host --platform linux/arm64 nmaguiar/d3k:build /bin/sh -c "status.js && sleep 5 && k3d cluster stop"
+        docker commit buildfull nmaguiar/d3k:build-full:arm64
+        docker push nmaguiar/d3k:build-full:arm64
+
+    - name: Create and push multi-arch manifest
+      run : |
+        docker manifest create nmaguiar/d3k:build-full \
+          --amend nmaguiar/d3k:build-full:amd64 \
+          --amend nmaguiar/d3k:build-full:arm64
+        docker manifest push nmaguiar/d3k:build-full
