--- a/.github/workflows/docker-full-image.yml
+++ b/.github/workflows/docker-full-image.yml
@@ -14,6 +14,30 @@ on:
     - cron: '28 1 * * 6'
 
 jobs:
+  build64:
+    runs-on: self-hosted 
+
+    steps:
+    - name: Set up QEMU
+      uses: docker/setup-qemu-action@v3
+    - name: Set up Docker Buildx
+      uses: docker/setup-buildx-action@v3
+    - name: Create Docker Buildx Builder
+      run: |
+        docker buildx create --use
+        docker buildx inspect --bootstrap
+    - name: Login to DockerHub
+      uses: docker/login-action@v3
+      with:
+        username: ${{ secrets.DOCKERHUB_USERNAME }}
+        password: ${{ secrets.DOCKERHUB_TOKEN }}
+    - uses: actions/checkout@v4
+      name: Checkout
+    - name: Full image build arm64
+      run : |
+        docker run --name buildfulla64 --privileged --cgroupns=host --platform linux/arm64 nmaguiar/d3k:build /bin/sh -c "status.js && sleep 5 && k3d cluster stop"
+        docker commit buildfulla64 nmaguiar/d3k:build-full-arm64
+        docker push nmaguiar/d3k:build-full-arm64
 
   build:
 
@@ -46,6 +70,20 @@ jobs:
         docker commit buildfulla64 nmaguiar/d3k:build-full-arm64
         docker push nmaguiar/d3k:build-full-arm64
 
+    - name: Create and push multi-arch manifest
+      run : |
+        docker manifest create nmaguiar/d3k:build-full \
+          --amend nmaguiar/d3k:build-full-amd64 \
+          --amend nmaguiar/d3k:build-full-arm64
+        docker manifest push nmaguiar/d3k:build-full
+
+  build_manifest:
+    runs-on: ubuntu-latest
+    needs:
+    - build
+    - build64
+
+    steps:
     - name: Create and push multi-arch manifest
       run : |
         docker manifest create nmaguiar/d3k:build-full \
