--- a/.github/workflows/docker-full-image.yml
+++ b/.github/workflows/docker-full-image.yml
@@ -35,6 +35,7 @@ jobs:
       name: Checkout
     - name: Full image build arm64
       run : |
+        docker system prune -af
         docker run --name buildfulla64 --privileged --cgroupns=host --platform linux/arm64 nmaguiar/d3k:build /bin/sh -c "status.js && sleep 5 && k3d cluster stop"
         docker commit buildfulla64 nmaguiar/d3k:build-full-arm64
         docker push nmaguiar/d3k:build-full-arm64
@@ -61,6 +62,7 @@ jobs:
       name: Checkout
     - name: Full image build x64
       run : |
+        docker system prune -af
         docker run --name buildfullx64 --privileged --cgroupns=host nmaguiar/d3k:build /bin/sh -c "status.js && sleep 5 && k3d cluster stop"
         docker commit buildfullx64 nmaguiar/d3k:build-full-amd64
         docker push nmaguiar/d3k:build-full-amd64
