--- a/.github/workflows/docker-full-image.yml
+++ b/.github/workflows/docker-full-image.yml
@@ -74,6 +74,15 @@ jobs:
     - build64
 
     steps:
+    - name: Set up QEMU
+      uses: docker/setup-qemu-action@v3
+    - name: Set up Docker Buildx
+      uses: docker/setup-buildx-action@v3
+    - name: Login to DockerHub
+      uses: docker/login-action@v3
+      with:
+        username: ${{ secrets.DOCKERHUB_USERNAME }}
+        password: ${{ secrets.DOCKERHUB_TOKEN }}
     - name: Create and push multi-arch manifest
       run : |
         docker manifest create nmaguiar/d3k:build-full \
