update docker startup script to set storage driver

--- a/ojob_p2.yaml
+++ b/ojob_p2.yaml
@@ -49,11 +49,12 @@ jobs:
 # ===================
 - name : Start docker
   lang : shell
-  exec : |
+  exec : | #shell
     {{#if NODOCKER}}
     echo Docker not started
     {{else}}
     sudo update-alternatives --set iptables /usr/sbin/iptables-legacy
+    sudo /bin/sh -c "echo '{ \"storage-driver\": \"vfs\" }' > /etc/docker/daemon.json"
     echo updated
     sudo service docker start 
     sudo systemctl enable docker
